Fix or comments